--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-gunicorn==20.0.4
 appdirs==1.4.4
 async-generator==1.10
 attrs==22.2.0
@@ -22,12 +21,14 @@ Jinja2==3.1.2
 lxml==4.9.2
 MarkupSafe==2.1.2
 outcome==1.2.0
+packaging==23.0
 parse==1.19.0
 pycparser==2.21
 pyee==8.2.2
 pyppeteer==1.0.2
 pyquery==2.0.0
 PySocks==1.7.1
+python-dotenv==1.0.0
 requests==2.28.2
 requests-html==0.10.0
 selenium==4.8.2
@@ -39,6 +40,7 @@ trio==0.22.0
 trio-websocket==0.9.2
 urllib3==1.26.14
 w3lib==2.1.1
+webdriver-manager==3.8.5
 websockets==10.4
 Werkzeug==2.2.3
 wsproto==1.2.0
