--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ cssselect==1.2.0
 exceptiongroup==1.1.0
 fake-useragent==1.1.1
 Flask==2.2.3
+gunicorn==20.1.0
 h11==0.14.0
 idna==3.4
 importlib-metadata==6.0.0
@@ -28,7 +29,7 @@ pyee==8.2.2
 pyppeteer==1.0.2
 pyquery==2.0.0
 PySocks==1.7.1
-python-dotenv==0.13.0
+python-dotenv==1.0.0
 requests==2.28.2
 requests-html==0.10.0
 selenium==4.8.2
